Bug 164660 - Battery applet is not updated when battery is removed
Summary: Battery applet is not updated when battery is removed
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-22 13:57 UTC by Georg Wittenburg
Modified: 2008-08-22 03:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (18.92 KB, image/png)
2008-06-22 13:58 UTC, Georg Wittenburg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Wittenburg 2008-06-22 13:57:55 UTC
Version:           4.0.82 (using Devel)
Installed from:    Compiled sources

The battery applet is not updated when battery is removed and still displays the last known state. Adding a new second battery applet displays the correct state.
Comment 1 Georg Wittenburg 2008-06-22 13:58:49 UTC
Created attachment 25515 [details]
Screenshot
Comment 2 Frederik Schwarzer 2008-07-07 01:14:00 UTC
I can confirm that.
The status is no longer updated even if you put the battery back in.
Same for starting KDE with no battery plugged in.
Comment 3 Georg Wittenburg 2008-07-19 16:55:59 UTC
Still present in 4.0.98.
Comment 4 Georg Wittenburg 2008-07-19 17:34:11 UTC
Let me take that last comment back. Debian hasn't packaged the Plasmoids from 4.0.98 yet due to a change in the package name. I'm still running the Plasmoids from 4.0.84. Sorry.
Comment 5 Alex Merry 2008-08-07 19:48:57 UTC
Does this still happen with 4.1?
Comment 6 Georg Wittenburg 2008-08-09 06:31:07 UTC
Yes, the bug is still present in 4.1.
Comment 7 Alex Merry 2008-08-22 03:21:02 UTC
Fixed in r850685 (4.1) and r850683 (trunk/4.2).