Update when batteries appear and disappear.

These really could do with some love (it was one of the earliest complex engine/applet pairs, and it shows), but working on them is a pain for me, as my laptop is old and decrepit.
Any laptop-weilding volunteers?
CCMAIL: plasma-devel@kde.org

BUG: 164660


svn path=/trunk/KDE/kdebase/workspace/; revision=850683